--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -2,9 +2,17 @@ Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russi
 WayfarersWings/UI/Achievements,Text,,Achievements,Conquiste,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
 WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
+WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,,,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},,,,,,,,,,,
+WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,,,,,,,,,,,
 WayfarersWings/Ribbons/Orbit,Text,,Entered in a stable orbit around {body},,,,,,,,,,,
+WayfarersWings/Ribbons/EVAOrbitName,Text,,{body} EVA in Orbit,,,,,,,,,,,
 WayfarersWings/Ribbons/EVAOrbit,Text,,Executed EVA in orbit around {body},,,,,,,,,,,
+WayfarersWings/Ribbons/EVASpaceName,Text,,{body} EVA in Space,,,,,,,,,,,
 WayfarersWings/Ribbons/EVASpace,Text,,Executed EVA in space around {body},,,,,,,,,,,
+WayfarersWings/Ribbons/LandedName,Text,,{body} Landing,,,,,,,,,,,
 WayfarersWings/Ribbons/Landed,Text,,Landed on {body},,,,,,,,,,,
+WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,,,,,,,,,,,
+WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},,,,,,,,,,,
+WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/GeeForce,Text,,Withstanded an acceleration of {geeForce}G,,,,,,,,,,,
