Better localization and new planets images

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -16,3 +16,13 @@ WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,,,,,,,,,,,
 WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},,,,,,,,,,,
 WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/GeeForce,Text,,Withstanded an acceleration of {geeForce}G,,,,,,,,,,,
+WayfarersWings/Ribbons/FlagPlantedName,Text,,{body} Flag,,,,,,,,,,,
+WayfarersWings/Ribbons/FlagPlanted,Text,,Planted a flag on {body} ground during EVA,,,,,,,,,,,
+WayfarersWings/Ribbons/SingleMissionTimeName,Text,,Endurance {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/SingleMissionTime,Text,,Returned safely after {time} {unit} in a single mission,,,,,,,,,,,
+WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,,,,,,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
