--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -24,5 +24,5 @@ WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},,,,,
 WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,,,,,,,,,,,
 WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
+WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,,,,,,,,,,,
+WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},,,,,,,,,,,
