--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -26,3 +26,7 @@ WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},,,,,,,,,,
 WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,,,,,,,,,,,
 WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,,,,,,,,,,,
 WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},,,,,,,,,,,
+WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,,,,,,,,,,,
+WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,,,,,,,,,,,
+WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {time} seconds,,,,,,,,,,,
