--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -30,3 +30,7 @@ WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,,,,,,,,,,,
 WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,,,,,,,,,,,
 WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {time} seconds,,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,,,,,,,,,,,
