Add solid fuel booster ribbon

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -34,3 +34,7 @@ WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,,,,,,,
 WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,,,,,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}%  of mass in solid boosters,,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
