Add heavy vehicle ribbons

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -35,6 +35,12 @@ WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerb
 WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,,,,,,,,,,,
 WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}%  of mass in solid boosters,,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}% of mass in solid boosters,,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLandedName,Text,,Heavy Vehicle Landed {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLanded,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
+WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,,,,,,,,,,,
