--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -44,3 +44,7 @@ WayfarersWings/Ribbons/HeavyVehicleLandedName,Text,,Heavy Vehicle Landed {rank},
 WayfarersWings/Ribbons/HeavyVehicleLanded,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
 WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,,,,,,,,,,,
