--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -29,7 +29,7 @@ WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},,,,,,,,
 WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,,,,,,,,,,,
 WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,,,,,,,,,,,
 WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {time} seconds,,,,,,,,,,,
+WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {seconds} seconds,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,,,,,,,,,,,
 WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,,,,,,,,,,,
@@ -40,8 +40,8 @@ WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
 WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLandedName,Text,,Heavy Vehicle Landed {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLanded,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLandingName,Text,,Heavy Vehicle Landing {rank},,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLanding,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
 WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},,,,,,,,,,,
 WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,,,,,,,,,,,
 WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},,,,,,,,,,,
