Add Kerbal Window details and add/revoke functionality

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -1,5 +1,15 @@
 Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russian,Chinese (Simplified),Portuguese (Brazil),Chinese (Traditional)
 WayfarersWings/UI/Achievements,Text,,Achievements,Conquiste,,,,,,,,,,
+WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,,,,,,,,,,,
+WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,,,,,,,,,,,
+WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,,,,,,,,,,,
+WayfarersWings/UI/Status,Text,,Status,,,,,,,,,,,
+WayfarersWings/UI/OnMission,Text,,On Mission,,,,,,,,,,,
+WayfarersWings/UI/Available,Text,,Available,,,,,,,,,,,
+WayfarersWings/UI/Dead,Text,,Dead,,,,,,,,,,,
+WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,,,,,,,,,,,
+WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,,,,,,,,,,,
+WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
 WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,,,,,,,,,,,
