Add wings search and bettere award UI

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -9,6 +9,7 @@ WayfarersWings/UI/Available,Text,,Available,,,,,,,,,,,
 WayfarersWings/UI/Dead,Text,,Dead,,,,,,,,,,,
 WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,,,,,,,,,,,
 WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,,,,,,,,,,,
+WayfarersWings/UI/Search,Text,,Search,,,,,,,,,,,
 WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
 WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
