--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -11,6 +11,8 @@ WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,,,,,,,,,,,
 WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,,,,,,,,,,,
 WayfarersWings/UI/Search,Text,,Search,,,,,,,,,,,
 WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,,,,,,,,,,,
+WayfarersWings/UI/SortByName,Text,,Sort by name,,,,,,,,,,,
+WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
 WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,,,,,,,,,,,
