Add missing localizations

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -1,64 +1,70 @@
 Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russian,Chinese (Simplified),Portuguese (Brazil),Chinese (Traditional)
-WayfarersWings/UI/Achievements,Text,Main window title,Achievements,Conquiste,,,,,,,,,,
-WayfarersWings/UI/MissionAchievements,Text,Window title for wings gained in current mission (Flight report),Mission Achievements,,,,,,,,,,,
-WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,,,,,,,,,,,
-WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,,,,,,,,,,,
-WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,,,,,,,,,,,
-WayfarersWings/UI/Status,Text,,Status,,,,,,,,,,,
-WayfarersWings/UI/OnMission,Text,,On Mission,,,,,,,,,,,
-WayfarersWings/UI/Available,Text,,Available,,,,,,,,,,,
-WayfarersWings/UI/Dead,Text,,Dead,,,,,,,,,,,
-WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,,,,,,,,,,,
-WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,,,,,,,,,,,
-WayfarersWings/UI/Search,Text,,Search,,,,,,,,,,,
-WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,,,,,,,,,,,
-WayfarersWings/UI/SortByName,Text,,Sort by name,,,,,,,,,,,
-WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,,,,,,,,,,,
+WayfarersWings/UI/Achievements,Text,Main window title,Achievements,Trofei,,,,,,,,,,
+WayfarersWings/UI/MissionAchievements,Text,Window title for wings gained in current mission (Flight report),Mission Achievements,Trofei della Missione,,,,,,,,,,
+WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,Tempo totale in missione,,,,,,,,,,
+WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,Tempo totale in EVA,,,,,,,,,,
+WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,Missioni completate,,,,,,,,,,
+WayfarersWings/UI/Status,Text,,Status,Stato,,,,,,,,,,
+WayfarersWings/UI/OnMission,Text,,On Mission,In Missione,,,,,,,,,,
+WayfarersWings/UI/Available,Text,,Available,Disponibile,,,,,,,,,,
+WayfarersWings/UI/Dead,Text,,Dead,Morto,,,,,,,,,,
+WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,Conferisci Decorazione,,,,,,,,,,
+WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,Conferisci il Kerbal,,,,,,,,,,
+WayfarersWings/UI/Search,Text,,Search,Cerca,,,,,,,,,,
+WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,Conferma la revoca della decorazione,,,,,,,,,,
+WayfarersWings/UI/SortByName,Text,,Sort by name,Ordina per nome,,,,,,,,,,
+WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,Ordina per prestigio,,,,,,,,,,
+WayfarersWings/UI/KerbalMissionsCount,Text,,{0} missions,{0} missioni,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
 WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
-WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,,,,,,,,,,,
-WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},,,,,,,,,,,
-WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,,,,,,,,,,,
-WayfarersWings/Ribbons/Orbit,Text,,Entered in a stable orbit around {body},,,,,,,,,,,
-WayfarersWings/Ribbons/EVAOrbitName,Text,,{body} EVA in Orbit,,,,,,,,,,,
-WayfarersWings/Ribbons/EVAOrbit,Text,,Executed EVA in orbit around {body},,,,,,,,,,,
-WayfarersWings/Ribbons/EVASpaceName,Text,,{body} EVA in Space,,,,,,,,,,,
-WayfarersWings/Ribbons/EVASpace,Text,,Executed EVA in space around {body},,,,,,,,,,,
-WayfarersWings/Ribbons/LandedName,Text,,{body} Landing,,,,,,,,,,,
-WayfarersWings/Ribbons/Landed,Text,,Landed on {body},,,,,,,,,,,
-WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,,,,,,,,,,,
-WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},,,,,,,,,,,
-WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/GeeForce,Text,,Withstanded an acceleration of {geeForce}G,,,,,,,,,,,
-WayfarersWings/Ribbons/FlagPlantedName,Text,,{body} Flag,,,,,,,,,,,
-WayfarersWings/Ribbons/FlagPlanted,Text,,Planted a flag on {body} ground during EVA,,,,,,,,,,,
-WayfarersWings/Ribbons/SingleMissionTimeName,Text,,Endurance {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/SingleMissionTime,Text,,Returned safely after {time} {unit} in a single mission,,,,,,,,,,,
-WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,,,,,,,,,,,
-WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,,,,,,,,,,,
-WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,,,,,,,,,,,
-WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},,,,,,,,,,,
-WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,,,,,,,,,,,
-WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,,,,,,,,,,,
-WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {seconds} seconds,,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,,,,,,,,,,,
-WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}% of mass in solid boosters,,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLandingName,Text,,Heavy Vehicle Landing {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLanding,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,,,,,,,,,,,
-WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,,,,,,,,,,,
+WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,Sfera di Influenza di {body},,,,,,,,,,
+WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},Entrato nella Sfera di Influenza di {body},,,,,,,,,,
+WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,Orbita Stabile di {body},,,,,,,,,,
+WayfarersWings/Ribbons/Orbit,Text,,Entered in a stable orbit around {body},Entrato in un'orbita stabile attorno a {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVAOrbitName,Text,,{body} EVA in Orbit,EVA in Orbita attorno a {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVAOrbit,Text,,Executed EVA in orbit around {body},Eseguito EVA in orbita attorno a {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVASpaceName,Text,,{body} EVA in Space,EVA nello Spazio attorno a {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVASpace,Text,,Executed EVA in space around {body},Eseguito EVA nello spazio attorno a {body},,,,,,,,,,
+WayfarersWings/Ribbons/LandedName,Text,,{body} Landing,Atterraggio su {body},,,,,,,,,,
+WayfarersWings/Ribbons/Landed,Text,,Landed on {body},Atterrato su {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,EVA a Terra su {body},,,,,,,,,,
+WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},Eseguito EVA a terra dopo l'atterraggio su {body},,,,,,,,,,
+WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},Alta Forza Gee {rank},,,,,,,,,,
+WayfarersWings/Ribbons/GeeForce,Text,,Withstanded an acceleration of {geeForce}G,Resistito ad un'accelerazione di {geeForce}G,,,,,,,,,,
+WayfarersWings/Ribbons/FlagPlantedName,Text,,{body} Flag,Bandiera di {body},,,,,,,,,,
+WayfarersWings/Ribbons/FlagPlanted,Text,,Planted a flag on {body} ground during EVA,Piantato una bandiera sul suolo di {body} durante l'EVA,,,,,,,,,,
+WayfarersWings/Ribbons/SingleMissionTimeName,Text,,Endurance {rank},Resistenza {rank},,,,,,,,,,
+WayfarersWings/Ribbons/SingleMissionTime,Text,,Returned safely after {time} {unit} in a single mission,Ritornato sano e salvo dopo {time} {unit} in una singola missione,,,,,,,,,,
+WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},Missioni Multiple {rank},,,,,,,,,,
+WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,Completate {missions} missioni o più,,,,,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},Tempo di Missione {rank},,,,,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,Trascorso {time} {unit} o più durante tutte le missioni,,,,,,,,,,
+WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,Atmosfera di {body},,,,,,,,,,
+WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},Entrato nell'atmosfera di {body},,,,,,,,,,
+WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,Splashdown,,,,,,,,,,
+WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,Resistito allo splashdown di un veicolo nell'oceano,,,,,,,,,,
+WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},Orbita Veloce {rank},,,,,,,,,,
+WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {seconds} seconds,Raggiunta orbita stabile del pianeta natale in meno di {seconds} secondi,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,Primo Kerbal nello Spazio,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,Premiato per essere stato il primo kerbal a raggiungere lo Spazio,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,Prima EVA nello Spazio,,,,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,Prima EVA condotta nello Spazio della Kerbalkind,,,,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},Propulsore a Combustibile Solido {rank},,,,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}% of mass in solid boosters,Lanciato dal pianeta natale con almeno {percentage}% di massa in propulsori a combustibile solido,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},Veicolo Pesante {rank},,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,Servito come membro dell'equipaggio di un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},Lancio di Veicolo Pesante {rank},,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,Lanciato su un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLandingName,Text,,Heavy Vehicle Landing {rank},Atterraggio di Veicolo Pesante {rank},,,,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLanding,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,Atterrato su un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
+WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},Atterraggio in Montagna {rank},,,,,,,,,,
+WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,Atterrato su una montagna più alta di {altitude} metri,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},Resistenza EVA {rank},,,,,,,,,,
+WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,Trascorso più di {time} {unit} continuamente eseguendo un'Attività Extraveicolare,,,,,,,,,,
+WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},Tempo Totale EVA {rank},,,,,,,,,,
+WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,Trascorso più di {time} {unit} eseguendo Attività Extraveicolari durante tutte le missioni,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,
