--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -16,7 +16,8 @@ WayfarersWings/UI/SortByName,Text,,Sort by name,Ordina per nome,,,,,,,,,,
 WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,Ordina per prestigio,,,,,,,,,,
 WayfarersWings/UI/KerbalMissionsCount,Text,,{0} missions,{0} missioni,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
-WayfarersWings/Ribbons/FirstTime,Text,,for the first time,per la prima volta,,,,,,,,,,
+WayfarersWings/Ribbons/FirstTimeName,Text,,{name} 1°,{name} 1°,,,,,,,,,,
+WayfarersWings/Ribbons/FirstTime,Text,,{description} for the first time,{description} per la prima volta,,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,Sfera di Influenza di {body},,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},Entrato nella Sfera di Influenza di {body},,,,,,,,,,
 WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,Orbita Stabile di {body},,,,,,,,,,
