Fix localization issues

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -1,6 +1,8 @@
 Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russian,Chinese (Simplified),Portuguese (Brazil),Chinese (Traditional)
 WayfarersWings/UI/Achievements,Text,Main window title,Achievements,Trofei,,,,,,,,,,
 WayfarersWings/UI/MissionAchievements,Text,Window title for wings gained in current mission (Flight report),Mission Achievements,Trofei della Missione,,,,,,,,,,
+WayfarersWings/UI/Ribbons,Text,,Wings,Decorazioni,,,,,,,,,,
+WayfarersWings/UI/Kerbals,Text,,Kerbals,Kerbal,,,,,,,,,,
 WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,Tempo totale in missione,,,,,,,,,,
 WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,Tempo totale in EVA,,,,,,,,,,
 WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,Missioni completate,,,,,,,,,,
@@ -9,15 +11,15 @@ WayfarersWings/UI/OnMission,Text,,On Mission,In Missione,,,,,,,,,,
 WayfarersWings/UI/Available,Text,,Available,Disponibile,,,,,,,,,,
 WayfarersWings/UI/Dead,Text,,Dead,Morto,,,,,,,,,,
 WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,Conferisci Decorazione,,,,,,,,,,
-WayfarersWings/UI/AwardToKerbal,Text,,Award to Kerbal,Conferisci il Kerbal,,,,,,,,,,
-WayfarersWings/UI/Search,Text,,Search,Cerca,,,,,,,,,,
+WayfarersWings/UI/AwardToKerbal,Text,,Award,Conferisci,,,,,,,,,,
+WayfarersWings/UI/Search,Text,,Search wing,Cerca decorazione,,,,,,,,,,
 WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,Conferma la revoca della decorazione,,,,,,,,,,
 WayfarersWings/UI/SortByName,Text,,Sort by name,Ordina per nome,,,,,,,,,,
 WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,Ordina per prestigio,,,,,,,,,,
 WayfarersWings/UI/KerbalMissionsCount,Text,,{0} missions,{0} missioni,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
-WayfarersWings/Ribbons/FirstTimeName,Text,,{name} 1°,{name} 1°,,,,,,,,,,
-WayfarersWings/Ribbons/FirstTime,Text,,{description} for the first time,{description} per la prima volta,,,,,,,,,,
+WayfarersWings/Ribbons/FirstTimeName,Text,name is the base ribbon name,{name} 1°,{name} 1°,,,,,,,,,,
+WayfarersWings/Ribbons/FirstTime,Text,description is the base ribbon description,{description} for the first time,{description} per la prima volta,,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,Sfera di Influenza di {body},,,,,,,,,,
 WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},Entrato nella Sfera di Influenza di {body},,,,,,,,,,
 WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,Orbita Stabile di {body},,,,,,,,,,
